Add parargraph to code

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <h1>
         Github Learning
     </h1>
+    <p>
+        I hate to learn Github it is giving headache 
+    </p>
 </body>
 </html>
