--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     <p>
         I hate to learn Github it is giving headache 
     </p>
+    <ul>
+        <li>Home</li>
+        <li>About us</li>
+        <li>Contact us</li>
+    </ul>
 </body>
 </html>
